# aumai-specs

./: .coverage  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api-reference.md  getting-started.md
examples/: quickstart.py
src/aumai_specs/: __init__.py  loader.py  models.py
src/aumai_specs/schemas/: __init__.py  agent_capability_v1.yaml  agent_error_taxonomy_v1.json  capsule_format_v1.json  tool_canonical_ir_v1.json
tests/: conftest.py  test_loader.py  test_models.py  test_schemas.py
